--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <!-- banner -->
-    <div class="jumbotron jumbotron-fluid" id="banner" style="background-color: black;">
+    <div class="jumbotron jumbotron-fluid" id="banner" style="background-color: black; padding: 10px;">
         <div class="container text-center text-md-left">
             <header>
                 <div class="row justify-content-between">
